[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
no-panic = "0.1.16"

serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"

tokio = { version = "1.21.2", features = ["full"] }
reqwest = "0.11.12"

async-recursion = "1.0.0"
actix = "0.13.0"
actix-web = "4.2.1"
actix-files = "0.6.2"

env_logger = "0.10.0"
log = "0.4.17"

chrono = { version = "0.4.23", features = ["serde"] }

dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
surrealdb = "1.0.0-beta.8"
